2015-06-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Use NSUInteger rather than unsigned, use memory
	management macros.
	* Source/NSConnection.m: Changes to avoid compiler warnings.
	* Headers/Foundation/NSData.h:
	* Source/NSData.m: add base64 initialisation methods (bug #45240)

2015-06-01 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSArray.h
	* Source/NSArray.m
	Add firstObject: method existing since 10.6

2015-05-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLConnection.m: Fix leak of limit date
	* Source/NSXMLParser.m: Fix leak of string

2015-05-26: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Source/Additions/Unicode.m
	* Tools/AGSOutput.m
	  return NULL or nil instead of NO where pointers are to
	  be returned 

2015-05-26  Richard Frith-Macdonald <rfm@gnu.org>

	* GSString.m: Fix sign extension bug
	* Source/NSXMLParser.m: Update to more exactly match OSX behavior
	* Source/NSDateFormatter.m: attempt to fix functionality broken
	by additional call to set date format during reset.

2015-05-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: Use libxml2 if available.

2015-05-24  Richard Frith-Macdonald <rfm@gnu.org>

	* GSString.m:
	* NSDebug.m:
	* NSZone.m:
	Minor optimisations and tidyups

2015-05-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Fix failure to check free when done flag before
	freeing memory.

2015-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m:
	* Source/GSString.m:
	Some optimisation.  Fix -hasPrefix: and -hasSuffix: to use literal
	search as on OSX.

2015-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/install.texi:
	* ANNOUNCE:
	* INSTALL:
	* NEWS:
	Final updates for 1.24.8 release

2015-05-13  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Tidy compiler and preprocessor  detection and use
	warning for potentially broken compiler selection.
	* configure: regenerate
